# dykongshan

./: .gitignore  AGENTS.md  AI工作提效变现扩展方向.md  AI工作提效变现方向调研报告.md  GETTING_STARTED.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SKILLS_SUPPLEMENT_2026_03.md  SKILLS_SUPPLEMENT_2026_03_WEEK10.md  SKILLS_SUPPLEMENT_2026_03_WEEK11.md  SKILLS_SUPPLEMENT_2026_03_WEEK12.md  SKILLS_SUPPLEMENT_2026_03_WEEK13.md  SKILLS_SUPPLEMENT_2026_03_WEEK14.md  SKILLS_SUPPLEMENT_2026_03_WEEK14_PART2.md  SKILLS_SUPPLEMENT_2026_03_WEEK15.md  SKILLS_SUPPLEMENT_2026_03_WEEK16.md  SKILLS_SUPPLEMENT_2026_03_WEEK17.md  SKILLS_SUPPLEMENT_2026_03_WEEK2.md  SKILLS_SUPPLEMENT_2026_03_WEEK3.md  SKILLS_SUPPLEMENT_2026_03_WEEK4.md  SKILLS_SUPPLEMENT_2026_03_WEEK5.md  SKILLS_SUPPLEMENT_2026_03_WEEK6.md  SKILLS_SUPPLEMENT_2026_03_WEEK7.md  SKILLS_SUPPLEMENT_2026_03_WEEK8.md  SKILLS_SUPPLEMENT_2026_03_WEEK9.md  SKILLS_SURVEY_2026_03_GAME_CLIENT_TEST.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_DEVOPS.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_FINAL.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V2.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V3.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V4.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V5.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V6.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V7.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V8.md  SKILLS_SURVEY_2026_03_GAME_PYTHON_TEST_V9.md  SKILLS_SURVEY_2026_03_LATEST.md  (+98 more)
.claude/.claude/skills/kanban/: SKILL.md  pyproject.toml
.claude/.claude/skills/kanban/agents/: code-reviewer.md  pm.md  (+15 more)
(+3493 files in other folders)
