[project]
name = "kanban"
version = "0.2.0"
description = "Kanban multi-agent orchestration framework"
requires-python = ">=3.9"

[project.scripts]
kanban = "core.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]

[tool.coverage.run]
source = ["core"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
